# debian-kernel

./: MAINTAINERS.Debian  README
docs/: bits_kernel_team_0306.txt
docs/handbook/: Makefile  kernel-handbook.sgml  version.ent
firmware-free/: defines
firmware-free/debian/: changelog  rules  rules.defs  rules.real  source.lintian-overrides
firmware-free/linux-free/: LICENSE  defines
ipw3945d/debian/: README.Debian  changelog  control  copyright  dirs  init  ipw3945d.8  logrotate  modprobe  postinst  postrm  rules
kernel-patch-powerpc-2.4.27/config/: power3.stub  powerpc-smp.stub  powerpc.stub
kernel-patch-powerpc-2.4.27/debian/: changelog  control-flavour-powerpc-powerpc-powerpc.m4  control-subarch-powerpc-apus.m4  control-subarch-powerpc-powerpc.m4  flavours  rules  unpatch.m4
linux-2.6-exp/debian/: changelog  rules  rules.defs  rules.real
linux-2.6-git/debian/: changelog
linux-base/debian/: NEWS  changelog  control  linux-base.install  linux-base.manpages  postinst  rules  templates
linux-base/lib/: DebianLinux.pm
linux-base/man/: linux-version.1
linux-modules-contrib-2.6/: defines
linux-modules-contrib-2.6/debian/: changelog  rules  rules.real
linux-modules-contrib-2.6/em8300/: copyright  defines
linux-modules-contrib-2.6/ipw2100/: copyright  defines  rules
linux-modules-contrib-2.6/ipw2200/: defines  rules
linux-modules-contrib-2.6/ipw3945/: copyright  defines  rules
linux-modules-contrib-2.6/ivtv/: copyright  defines  rules
linux-modules-contrib-2.6/open-vm/: defines
linux-modules-contrib-2.6/rt73/: copyright  defines
linux-modules-extra-2.6/: defines
linux-modules-extra-2.6/atl2/: copyright  defines
linux-modules-extra-2.6/aufs/: copyright  defines
linux-modules-extra-2.6/batman-adv/: copyright  defines
linux-modules-extra-2.6/batmand-gateway/: copyright  defines
linux-modules-extra-2.6/btrfs/: copyright  defines
linux-modules-extra-2.6/debian/: changelog  rules  rules.defs  rules.real
linux-modules-extra-2.6/drbd8/: defines
linux-modules-extra-2.6/eeepc-acpi/: copyright  defines
linux-modules-extra-2.6/et131x/: copyright  defines
linux-modules-extra-2.6/gspca/: copyright  defines  rules
linux-modules-extra-2.6/iscsitarget/: copyright  defines
linux-modules-extra-2.6/kqemu/: copyright  defines
linux-modules-extra-2.6/linux-wlan-ng/: copyright  defines  rules
linux-modules-extra-2.6/loop-aes/: copyright  defines  rules
linux-modules-extra-2.6/lzma/: copyright  defines
linux-modules-extra-2.6/mol/: copyright  defines  rules  rules.old
linux-modules-extra-2.6/nilfs2/: copyright  defines
linux-modules-extra-2.6/pwc/: copyright  defines  rules
linux-modules-extra-2.6/r6040/: copyright  defines
linux-modules-extra-2.6/redhat-cluster/: copyright  defines
linux-modules-extra-2.6/rt2400/: copyright  defines
linux-modules-extra-2.6/rt2500/: copyright  defines
linux-modules-extra-2.6/sfc/: copyright  defines
linux-modules-extra-2.6/spca5xx/: copyright  defines
linux-modules-extra-2.6/speakup/: copyright  defines
linux-modules-extra-2.6/squashfs/: copyright  defines  rules
linux-modules-extra-2.6/tp-smapi/: copyright  defines  rules
linux-modules-extra-2.6/unionfs/: copyright  defines  rules
linux-modules-extra-2.6/virtualbox-ose/: defines
linux-modules-extra-2.6/virtualbox-ose-guest/: defines
linux-modules-nonfree-2.6/: defines
linux-modules-nonfree-2.6/broadcom-sta/: copyright  defines  rules
linux-modules-nonfree-2.6/debian/: changelog  copyright  rules  rules.real
linux-modules-nonfree-2.6/fglrx/: copyright  defines
linux-modules-nonfree-2.6/kqemu/: copyright  defines  rules
linux-modules-nonfree-2.6/nvidia-kernel/: copyright  defines
linux-modules-nonfree-2.6/nvidia-kernel-legacy-71xx/: copyright  defines
linux-modules-nonfree-2.6/nvidia-kernel-legacy-96xx/: copyright  defines
linux-modules-nonfree-2.6/unicorn/: copyright  defines
linux-nonfree-2.6/debian/: changelog  rules  rules.real
modules/unicorn/unicorn/adsl_status/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c  status.c  status.h
modules/unicorn/unicorn/adsl_status/src/.deps/: callbacks.P  interface.P  main.P  status.P  support.P
scripts/: kconfig.ml  prune-non-free  split-config  split-config-cleanup  testconfigs
utils/yaird/: AUTHORS  ChangeLog  LICENCE.KLIBC  Makefile.am  Makefile.in  Makefile.incl  NEWS  README  TODO  bootstrap.sh  configure  configure.in
utils/yaird/debian/: changelog  control  control.in  copyright  docs  mkinitrd.yaird  mkinitrd.yaird.8  rules  watch  yaird.doc-base  yaird.install  yaird.manpages
utils/yaird/debian/cdbs/1/rules/: buildinfo.mk
utils/yaird/debian/patches/: hotplug-typo.patch  kconf-check.patch  mdadm.patch  module-loading_with_digit_or_dash.patch  series
utils/yaird/doc/: Makefile.am  Makefile.in  authors.xml  concepts.xml  crypto.xml  input.xml  intro.xml  kernel.xml  license.xml  nfs.xml  raid.xml  security.xml  shlibs.xml  spec.xml  tools.xml  yaird.xml.in
utils/yaird/doc/figures/: console.dia
utils/yaird/exec/: Makefile.am  Makefile.in  findlibs.c  run_init.c  trynfs.c
utils/yaird/exec/ipconfig/: Makefile.am  Makefile.in  main.c  netdev.c  netdev.h
utils/yaird/exec/nfsmount/: Makefile.am  Makefile.in  main.c  mount.c  nfsmount.h  sunrpc.c
utils/yaird/include/: config.h.in
utils/yaird/man/: Makefile.am  Makefile.in  yaird.8
utils/yaird/perl/: ActionList.pm  ActiveBlockDev.pm  ActiveBlockDevTab.pm  Base.pm  Blacklist.pm  BlockSpecialFileTab.pm  Conf.pm.in  CryptEntry.pm  CryptTab.pm  FsEntry.pm  FsOpts.pm  FsTab.pm  Hardware.pm  IdeDev.pm  Image.pm  Input.pm  InputTab.pm  KConfig.pm  LabeledPartition.pm  LabeledPartitionTab.pm  LogicalVolume.pm  LvmTab.pm  Makefile.am  Makefile.in  ModProbe.pm  NetDev.pm  NetDevTab.pm  Obj.pm  Opts.pm  Pack.pm  Parser.pm  PciDev.pm  PciMapEntry.pm  PciTab.pm  PhysicalVolume.pm  Plan.pm  RaidDev.pm  RaidTab.pm  ScsiDev.pm  SharedLibraries.pm  (+6 more)
utils/yaird/templates/: Debian-initrd.cfg  Debian.cfg  Default.cfg.in  Fedora.cfg  Makefile.am  Makefile.in
(+1655 files in other folders)
